# dl-learning-repo

./: .gitignore  README.md  pyproject.toml
configs/: base_swin.yaml
learning-notebooks/: Tensor_Shape_Manipulation.ipynb  Torchvision_Transforms.ipynb
src/: main.py
src/blocks/: basic_layer.py  swin_transformer_block.py
src/configs/: config.py
src/datasets/: dataloader_factory.py  image_datasets.py
src/layers/: utils.py  window_attention.py
src/models/: model_factory.py  swin_transformer.py
src/trainers/: lightning_trainer.py
tests/: test_basic_layer.py  test_layers.py  test_swin_transformer.py  test_swin_transformer_block.py  test_swin_transformer_model.py  test_util_layers.py  test_window_self_attention.py
